# No-Sleep

./: CMakeLists.txt  LICENSE  README.md  core_instance.cpp  core_instance.h  icons.qrc  main.cpp  sleep_controller.cpp  sleep_controller.h
backup_scripts/: set_sleep_on_lid_close_WINDOWS.bat
